--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -41,8 +41,13 @@
   </div>
   <div>
     <label for="remark">備考：</label>
-    <input type="text" id="remark" th:field="*{student.remark}" required/>
+    <input type="text" id="remark" th:field="*{student.remark}"/>
   </div>
+  <div>
+    <label for="isDeleted">キャンセル：</label>
+    <input type="checkbox" id="isDeleted" th:field="*{student.deleted}"/>
+  </div>
+
   <div th:each="course, stat : *{studentsCourses}">
     <label for="id"
            th:for="studentsCourses.__${stat.index}__.courseId">受講コースID：　</label>
